--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PresentActivity"></activity>
+        <activity android:name=".PresentActivity" />
+
+        <service
+            android:name=".WifiP2PService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver
+            android:name=".WifiP2PBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
     </application>
 
 </manifest>
